...
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textSize="@dimen/dialogTextSize"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxAgree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:checked="false"
        android:text="@string/i_understand"
        android:textSize="@dimen/dialogTextSize"
        app:layout_constraintBottom_toTopOf="@+id/okayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/okayButton"
        android:layout_width="wrap_content"
...
