...
        android:text="@string/set_destination_yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setlocationNowTextView" />

    <Button
        android:id="@+id/laterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/fabbuttonbackground"
        android:text="@string/set_destination_later"
...
